# napari-networkx

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg  tox.ini
src/napari_networkx/: __init__.py  _reader.py  _writer.py  napari.yaml  utils.py
src/napari_networkx/_tests/: test_reader.py  test_writer.py
