[metadata]
name = napari-networkx
description = Read and write spatial graphs using networkx
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/BodenmillerGroup/napari-networkx
author = Jonas Windhager
author_email = jonas.windhager@uzh.ch
license = MIT
license_files = LICENSE
classifiers =
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Image Processing
project_urls =
    Bug Tracker = https://github.com/BodenmillerGroup/napari-networkx/issues
    Documentation = https://github.com/BodenmillerGroup/napari-networkx#README.md
    Source Code = https://github.com/BodenmillerGroup/napari-networkx
    User Support = https://github.com/BodenmillerGroup/napari-networkx/issues

[options]
packages = find:
install_requires =
    napari @ git+https://github.com/JoOkuma/napari.git@graph-layer
    napari-graph @ git+https://github.com/JoOkuma/napari-graph.git@undirected-graph
    networkx
python_requires = >=3.8
include_package_data = True
package_dir =
    =src
setup_requires = setuptools_scm

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    napari-networkx = napari_networkx:napari.yaml

[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/

[options.package_data]
* = *.yaml
